--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@handlebars/allow-prototype-access": "^1.0.3",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "express-session": "^1.17.1",
     "handlebars": "^4.5.3",
     "mongoose": "^5.9.20",
     "uuid": "^8.1.0"
