--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express-session": "^1.17.1",
     "handlebars": "^4.5.3",
     "mongoose": "^5.9.20",
+    "nodemailer": "^6.4.10",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
