--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.6.0",
     "handlebars": "^4.5.3",
+    "helmet": "^3.23.3",
     "mongoose": "^5.9.20",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^8.1.0"
